style/base.css
/* ... */
	
	a,
	.template-component-list li>span
	{
		color:#199CDB;
	}
	
	.template-page-404 .template-content h1
	{
		color:#E2E6E7;
	}
		
	/**************************************************************************/
	/* Color / Background													  */
	/**************************************************************************/
		
	/* body {
		background-color: #47484A;
	} */

	.template-footer,
	.template-component-menu-default>.sf-menu>li ul
	{
		background-color:#222222;
	}
		
	.template-header .template-header-top.template-header-top-sticky,
	.template-header .template-header-top.template-header-top-static,
	.template-component-menu-responsive>ul,
	.rev_slider_wrapper,
	.flexnav li a,
	.flexnav li ul li a,
	.flexnav .touch-button
	{
		background-color:#FFFFFF;
	}
	
	.template-component-google-map .template-component-google-map-button,
	.flexnav li.item-with-ul ul a
	{
		background-color:#FAFAFA;
	}
	
	.template-component-header-subheader>div,
	.template-component-counter-bar-list>ul>li>div,
	.template-component-divider
	{
		background-color:#E2E6E7;
	}
	
	.template-footer .template-component-button:hover,
	.template-widget-tag li a:hover,
	.template-pagination>ul>li:hover,
	.template-pagination>ul>li.template-pagination-button-selected,
	.template-component-booking .template-component-booking-item-header>span,
	.template-component-booking .template-component-booking-vehicle-list>li:hover,
	.template-component-booking .template-component-booking-vehicle-list>li.template-state-selected,
	.template-component-booking .template-component-booking-package-list>li.template-state-selected>div.template-component-button-box>.template-component-button,
	.template-component-booking .template-component-booking-service-list>li.template-state-selected>div.template-component-button-box>.template-component-button,
	.template-component-button:hover,
	.template-component-counter-bar-list>ul>li>div>div,
	.template-component-gallery .template-component-gallery-filter-list>li>a:hover,
	.template-component-gallery .template-component-gallery-filter-list>li>a.template-state-selected,	
	.template-component-go-to-top:hover,
	.template-component-tab.ui-tabs .ui-tabs-nav li.ui-state-default.ui-state-hover,
	.template-component-tab.ui-tabs .ui-tabs-nav li.ui-state-default.ui-state-active,
	.template-component-testimonial-list .template-component-testimonial-list-navigation .template-component-testimonial-list-navigation-left:hover,
	.template-component-testimonial-list .template-component-testimonial-list-navigation .template-component-testimonial-list-navigation-right:hover,
	.template-component-social-icon-list.template-component-social-icon-list-3 li a:hover,
	.dtpicker-components .dtpicker-compButton:hover,
	.dtpicker-buttonCont .dtpicker-button:hover
	{
		background-color:#199CDB;
	}
	
	::-moz-selection
	{
		background-color:#199CDB;
	}
	
	.template-background-color-1,
	.template-component-blockquote
	{
		background-color:#F5F5F5;
	}
	
	.template-background-color-2,
	.dtpicker-overlay .dtpicker-compValue:focus
	{
		background-color:#F0F0F0;
	}
	
	input
	{
		background-color:transparent;
	}
	
	body>.template-component-search-form
	{
		background-color:#1B1B1B;
	}
	
	.template-qtip.template-qtip-success.qtip
	{
		background-color:#67CC2A;
	}
	
	.template-qtip.template-qtip-error.qtip
	{
		background-color:#FF9600;
	}
	
	.template-component-go-to-top
	{
		background-color:rgba(0,0,0,0.4);
	}
	
	.template-component-image .template-component-image-hover
	{	
		background:rgba(38,47,63,0.3);
	}
	
	.template-component-image .template-component-image-hover>span>span>span.template-component-image-hover-divider
	{
		background:rgba(255,255,255,0.5);
	}
	
	.tparrows.preview1::after,
	.tp-bullets.preview1 .tp-bullet
	{
		background:rgba(0,0,0,0.15);
	}
	
	.fancybox-skin
	{
		background:#FFFFFF;
	}
	
	.tparrows.preview1:hover::after,
	.tp-bullets.preview1 .tp-bullet:hover,
	.tp-bullets.preview1 .tp-bullet.selected 
	{
		background:#FFFFFF !important;
	}

	.template-component-button,
	.dtpicker-buttonCont .dtpicker-button
	{
		background-color:transparent;
	}
	
	/**************************************************************************/
	/* Color / Border														  */
	/**************************************************************************/
	
	.template-footer .template-footer-bottom
	{
		border-color:#47484A;
	}
	
	.template-header .template-header-top .template-header-top-icon-list .template-icon-meta-menu
	{
		border-color:rgba(255,255,255,0.85);
	}
	
	.template-header .template-header-top .template-header-top-icon-list .template-icon-meta-menu:hover
	{
		border-color:#FFFFFF;
	}
/* ... */

